--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                 <p><a href="#" class="scroll">I'm </a></p>
-                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A Web developer</h1>
+                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">A Fullstack Web developer</h1>
               </div>
             </div>
           </div>
@@ -101,18 +101,22 @@
       <section class="ftco-section about-section">
         <div class="container">
           <div class="row d-flex" data-scrollax-parent="true">
-            <div class="col-md-4 author-img" style="background-color:#ffffff00 "
-              data-scrollax=" properties: { translateY: '-70%'}"></div>
-            <div class="col-md-2"></div>
+            <!-- <div class="col-md-1"></div> -->
+            <div class="col-md-5 author-img" style="background-color:url('./me.png') "
+              data-scrollax=" properties: { translateY: '-70%'}">
+            <img class="w-100" src="./me.png" alt="me" >
+            </div>
+            <div class="col-md-1"></div>
             <div class="col-md-6 wrap ftco-animate">
               <div class="about-desc">
                 <h1 class="bold-text">About</h1>
                 <div class="p-5">
-                  <h2 class="mb-5">Hi! I'm Hassan ben</h2>
-                  <p>I am
-                    A software developer and UI designer based in Morocco I'm a multi-talented human, graduate of IT
-                    development.
-                    I have a background in tech support.</p>
+                  <h2 class="mb-5">Hi! I'm Hassan BenAdardor</h2>
+                  <p>
+                    <span id="age">25</span>-year-old
+                    a Fullstack web developer At <a class="grafimage" target="_blank" href="https://www.grafimage.com">Grafimage</a></p>
+                    <p>I was born and raised in  Guelmim ,A small city in southern Morocco where I Survived form wandering through the streets,Currently live in Agadir</p>
+                    <p>I'm a multi-talented human, graduate of IT development. I have a background in tech support.</p>
                   <!-- <p><a href="#">Checkout my resume</a></p> -->
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a target="_blank" href="https://www.twitter.com/hassan_listoun"><span
@@ -125,8 +129,8 @@
 
                   </ul>
                   <h5>Contact me here!</h5>
-                  <p>Email: <a href="#">hassan.listoun@gmail.com</a></p>
-                  <p>Phone: <a href="#">+212-614-14-17-86</a></p>
+                  <p>Email: <a href="mailto:listoun.developer@gmail.com">listoun.developer@gmail.com</a></p>
+                  <p>Phone: <a href="tel:+212-614-14-17-86">+212-614-14-17-86</a></p>
                 </div>
               </div>
             </div>
@@ -226,7 +230,7 @@
                 <h2 class="mb-3">Contact Us</h2>
                 <p>I'm available for remote work
                   if you would like to build something together,</p>
-                <p class="h3 email"><a href="#">hassan.listoun@gmail.com</a></p>
+                <p class="h3 email"><a href="mailto:listoun.developer@gmail.com">listoun.developer@gmail.com</a></p>
               </div>
             </div>
           </div>
