--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <h2 class="mb-3">Contact Us</h2>
                 <p>I'm available for remote work
                   if you would like to build something together,</p>
-                <p class="h3 email"><a href="mailto:listoun.developer@gmail.com">listoun.developer@gmail.com</a></p>
+                <p class="h3 email"><a style="font-size: 19px;" href="mailto:listoun.developer@gmail.com">listoun.developer@gmail.com</a></p>
               </div>
             </div>
           </div>
