[document] update resume file

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
                   <p>
                     <a href="./assets/documents/resume.pdf" class="btn " target="_blank" rel="noopener noreferrer">
-                      Check my resume
+                      Checkout my resume
                     </a>
                   </p>
 
