--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   <title>Listoun - self taught web developer</title>
   <meta name="title" content="Listoun - self taught web developer">
   <meta name="description"
-    content="Web Developer who lives in Agadir, Morocco, with  three years with tech stack that includes larval, javascript, bootstrap and one year with React.">
+    content="Web Developer based in Agadir, Morocco, with  three years with tech stack that includes larval, javascript, bootstrap and one year with React.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://listoun.github.io">
   <meta property="og:title" content="Listoun - self taught web developer">
   <meta property="og:description"
-    content="Web Developer who lives in Agadir, Morocco, with  three years with tech stack that includes larval, javascript, bootstrap and one year with React.">
+    content="Web Developer based in Agadir, Morocco, with  three years with tech stack that includes larval, javascript, bootstrap and one year with React.">
   <meta property="og:image" content="./assets/og-image.png">
 
   <!-- Twitter -->
@@ -34,7 +34,7 @@
   <meta property="twitter:url" content="https://listoun.github.io">
   <meta property="twitter:title" content="Listoun - self taught web developer">
   <meta property="twitter:description"
-    content="Web Developer who lives in Agadir, Morocco, with  three years with tech stack that includes larval, javascript, bootstrap and one year with React.">
+    content="Web Developer based in Agadir, Morocco, with  three years with tech stack that includes larval, javascript, bootstrap and one year with React.">
   <meta property="twitter:image" content="./assets/og-image.png">
 
 </head>
@@ -105,11 +105,11 @@
                   <h2 class="mb-5 font-weight-bold">About me</h2>
                   <p>
                     My name is BenAdardor Hassan
-                    <br>"had to pronounce 😅", You can call me <strong>Listoun</strong>.
+                    <br>"hard to pronounce 😅", You can call me <strong>Listoun</strong>.
                   </p>
 
                   <p>Web Developer at <a href="http://www.doctori.ma" target="_blank"
-                      rel="noopener noreferrer">Doctori</a> who lives in Agadir, Morocco.</p>
+                      rel="noopener noreferrer">Doctori</a> based in Agadir, Morocco.</p>
                   <p>I have been working as a developer for around three years with tech stack that includes
                     <a href="https://twitter.com/laravelphp" target="_blank" rel="noopener noreferrer">@laravelphp</a>,
                     <a href="https://twitter.com/JavaScript" target="_blank" rel="noopener noreferrer">@JavaScript</a>,
