--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
     content="Web Developer based in Agadir, Morocco, with  three years with tech stack that includes larval, javascript, bootstrap and one year with React.">
   <meta property="twitter:image" content="./assets/og-image.png">
 
+  <!-- Hotjar Tracking Code for https://listoun.github.io/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:3294078,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head>
 
 <body>
